# braincheck

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  install-spot.sh
.github/workflows/: cmake-build-and-test.yml
src/: CMakeLists.txt  main.cpp  tests.cpp
src/argparse/: CMakeLists.txt  argparse.cpp  argparse.hpp
src/brainfuck/: CMakeLists.txt  analysis.cpp  analysis.hpp  brainfuck.hpp  kripke.cpp  kripke.hpp  model.cpp  model.hpp  program.cpp  program.hpp
